--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,43 +1,39 @@
-# Version of docker-compose
 version: '3'
 
-# Containers we are going to run
 services:
-  # Our Phoenix container
-  fizz_buzz:
-    # The build parameters for this container.
+  phoenix:
     build:
-      # Here we define that it should build from the current directory
       context: .
     environment:
-      # Variables to connect to our Postgres server
       PGUSER: ${PGUSER}
       PGPASSWORD: ${PGPASSWORD}
       PGDATABASE: ${PGDATABASE}
       PGPORT: ${PGPORT}
-      # Hostname of our Postgres container
       PGHOST: ${PGHOST}
     ports:
-      # Mapping the port to make the Phoenix app accessible outside of the container
       - "4000:4000"
     depends_on:
-      # The db container needs to be started before we start this container
       - db
     volumes:
       - .:/app
-      - /app/assets/node_modules/
+      - phoenix_mix_deps:/app/deps
+      - phoenix_mix_build:/app/_build
+      - phoenix_node_modules:/app/assets/node_modules
+    stdin_open: true
+    tty: true
+  
   db:
-    # We use the predefined Postgres image
     image: postgres:9.6
     environment:
-      # Set user/password for Postgres
-      POSTGRES_USER: postgres
-      POSTGRES_PASSWORD: postgres
-      # Set a path where Postgres should store the data
+      POSTGRES_USER: ${PGUSER}
+      POSTGRES_PASSWORD: ${PGPASSWORD}
       PGDATA: /var/lib/postgresql/data/pgdata
     restart: always
     volumes:
       - pgdata:/var/lib/postgresql/data
-# Define the volumes
+      
 volumes:
   pgdata:
+  phoenix_mix_build:
+  phoenix_mix_deps:
+  phoenix_node_modules:
