--- a/.env
+++ b/.env
@@ -3,4 +3,4 @@ PGPASSWORD=postgres
 PGDATABASE=fizz_buzz_dev
 PGPORT=5432
 PGHOST=db
-APIBASEURL=http://localhost:4000
+APIBASEURL=http://phoenix:4000
