--- a/client/Dockerfile
+++ b/client/Dockerfile
@@ -1,13 +1,11 @@
 FROM ruby:3.0.0
 
 WORKDIR /app
-COPY . /app
 RUN gem install bundler:2.2.7
-RUN bundle install
-RUN ls
-
 COPY Gemfile /app/
 COPY Gemfile.lock /app/
+RUN bundle install
 
-RUN ls
+COPY . .
+
 CMD ["./irb.sh"]
